# memory-viewer

./: .dockerignore  .env.example  .gitignore  AUTONOMOUS_STATE.json  BUGFIX_KANBAN.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  KANBAN_RULES.md  LICENSE  MOBILE_FIX_REPORT.md  OPEN_SOURCE_PREP.md  P10_ITERATION_PLAN.md  P10_KANBAN.json  P10_QA_REPORT.md  P11_ITERATION_PLAN.md  P11_KANBAN.json  P12_ITERATION_PLAN.md  P12_KANBAN.json  P13_ITERATION_PLAN.md  P13_KANBAN.json  P14_ITERATION_PLAN.md  P15_ITERATION_PLAN.md  P16_ITERATION_PLAN.md  P16_KANBAN.json  P17_ITERATION_PLAN.md  P17_KANBAN.json  P18_ITERATION_PLAN.md  P18_KANBAN.json  P19_ITERATION_PLAN.md  P19_KANBAN.json  P1_ITERATION_PLAN.md  P1_TEST_PLAN.md  P20_ITERATION_PLAN.md  P20_KANBAN.json  P21_ITERATION_PLAN.md  P21_KANBAN.json  P22_ITERATION_PLAN.md  P22_KANBAN.json  P23_ITERATION_PLAN.md  (+54 more)
.github/: README.md
backend/: =3.10.0  =6.0  Dockerfile  fetch_agentmemory.py  instances.json  mcp_server.py  requirements.txt  start.sh
backup-full-features-20260531_223807/: README.md  main.py.bak  router_index.ts.bak
config/: memory-viewer.example.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  P35_DESIGN_RESEARCH.md  P36_AUDIT_CHECKLIST.md  P38_AUDIT_REPORT.md  P38_AUDIT_REPORT_r10.md  P38_AUDIT_REPORT_r11.md  P38_AUDIT_REPORT_r12.md  P38_AUDIT_REPORT_r13.md  P38_AUDIT_REPORT_r14.md  P38_AUDIT_REPORT_r15.md  P38_AUDIT_REPORT_r16.md  P38_AUDIT_REPORT_r21.md  P38_AUDIT_REPORT_r22.md  P38_AUDIT_REPORT_r24.md  (+19 more)
tools/mv-sdk/: pyproject.toml
tools/mv-sdk/mv_sdk/: __init__.py  client.py  models.py
(+2197 files in other folders)
