[project]
name = "mv-sdk"
version = "2.2.0"
description = "Memory Viewer Python SDK - Typed client for the Memory Viewer API"
requires-python = ">=3.10"
dependencies = ["httpx>=0.25", "pydantic>=2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
